[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/Mobile RPG Mockup.png" type="Texture" id=1]
[ext_resource path="res://images/Dungeon.png" type="Texture" id=2]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Battle.gd" type="Script" id=4]
[ext_resource path="res://scenes/PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://scenes/PanelStats.gd" type="Script" id=6]
[ext_resource path="res://scenes/SwordActionButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/HealActionButton.tscn" type="PackedScene" id=8]

[node name="Battle" type="Node"]
script = ExtResource( 4 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Dungeon" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Mobile RPG Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.243137 )
position = Vector2( 45, 80 )
texture = ExtResource( 1 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 46.0958, 31.4851 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PanelStats" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 50.0
margin_right = 87.0
margin_bottom = 72.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PanelStats"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/PanelStats/HBoxContainer"]
margin_top = 1.0
margin_right = 25.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "HP
25"
align = 1

[node name="AP" type="Label" parent="UI/PanelStats/HBoxContainer"]
margin_left = 29.0
margin_top = 1.0
margin_right = 54.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "AP
3"
align = 1

[node name="MP" type="Label" parent="UI/PanelStats/HBoxContainer"]
margin_left = 58.0
margin_top = 1.0
margin_right = 84.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "MP
10"
align = 1

[node name="PanelTextBox" type="Panel" parent="UI"]
margin_left = -4.0
margin_top = 137.0
margin_right = 94.0
margin_bottom = 165.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleActions" type="GridContainer" parent="UI"]
margin_left = 9.0
margin_top = 73.0
margin_right = 81.0
margin_bottom = 134.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordActionButton" parent="UI/BattleActions" instance=ExtResource( 7 )]
rect_min_size = Vector2( 32, 13 )

[node name="HealActionButton" parent="UI/BattleActions" instance=ExtResource( 8 )]
margin_left = 40.0
margin_right = 72.0
[connection signal="ap_changed" from="PlayerStats" to="UI/PanelStats" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/PanelStats" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/PanelStats" method="_on_PlayerStats_mp_changed"]
[connection signal="died" from="Enemy" to="." method="_on_Enemy_died"]
